# cwsigfind

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
.github/workflows/: iota-refresh.yml
docs/: app.js  index.html  iota_groups.json  styles.css
docs/lib/: beacons.js  geo.js  prefixes.js  propagation.js  sources.js  spot.js
scripts/: gen_prefixes.py
src/cwsigfind/: __init__.py  beacons.py  bus.py  config.py  filters.py  geo.py  iota.py  main.py  propagation.py  rig.py  spot.py  store.py
src/cwsigfind/sources/: __init__.py  base.py  dxcluster.py  pota.py  rbn.py  sota.py  wwbota.py  wwff.py
src/cwsigfind/web/: __init__.py  app.py
src/cwsigfind/web/static/: index.html
tests/: test_beacons.py  test_cluster_parse.py  test_config.py  test_filters.py  test_geo.py  test_iota.py  test_pota_source.py  test_propagation.py  test_rig.py  test_sota_source.py  test_spot.py  test_store.py  test_wwbota_source.py  test_wwff_source.py
