[project]
name = "cwsigfind"
version = "0.1.0"
description = "Live ham radio CW spot finder: POTA, DX cluster, RBN, with a local web UI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scott" }]
dependencies = [
    "httpx>=0.27",
    "telnetlib3>=2.0.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
cwsigfind = "cwsigfind.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cwsigfind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
